--- a/views/error_page.ejs
+++ b/views/error_page.ejs
@@ -13,7 +13,7 @@
         <div class="container-fluid d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-7 col-md-10 col-sm-10">
-                    <h1 class="display-2 text-white home-title">Error 404: Page not found!</h1>
+                    <h1 class="display-2 text-white">Error 404: Page not found!</h1>
                     <p class="home-subtitle">This option is still under construction.</p>
                     <a href="/5fe706f450a0c923cc4248e5"
                        class="btn btn-neutral rounded-pill home-btn-start-game">Go to player's profile</a>
