--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,34 +1,37 @@
 <!-- Footer -->
-<footer class="footer pt-0">
-    <div class="row align-items-center justify-content-lg-between">
-      <div class="col-lg-6">
-        <div class="copyright text-center  text-lg-left  text-muted">
-          &copy; 2020 Created by Christos Avdimiotis
-        </div>
+<footer id="globalFooter"
+        class="global">
+  <div class="inner">
+    <div class="row spaced">
+      <div class="col contact-details">
+        <p>Made by Christos Avdimiotis
+          <br>
+          <a href="mailto:cs.avdimiotis@gmail.com">cs.avdimiotis@gmail.com</a> 
+          <br>
+          Thessaloniki, Greece
+        </p>
       </div>
-      <div class="col-lg-6">
-        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-          <li class="nav-item">
-            <a href="https://www.creative-tim.com"
-               class="nav-link"
-               target="_blank">Creative Tim</a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.creative-tim.com/presentation"
-               class="nav-link"
-               target="_blank">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a href="http://blog.creative-tim.com"
-               class="nav-link"
-               target="_blank">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md"
-               class="nav-link"
-               target="_blank">MIT License</a>
-          </li>
+
+      <div class="col social-links">
+        <ul>
+          <!-- <li><a href="https://www.facebook.com/griflan"
+               target="_blank"
+               class="uline">Facebook</a></li>
+          <li>+</li> -->
+          <li><a href="https://www.linkedin.com/in/christos-avdimiotis-79276179/"
+               target="_blank"
+               class="uline">LinkedIn</a></li>
+          <!-- <li>+</li>
+          <li><a href="https://dribbble.com/Griflan"
+               target="_blank"
+               class="uline">Dribbble</a></li> -->
         </ul>
       </div>
     </div>
-  </footer>
+
+    <div class="legal">
+      <p>Copyright 2020 Christos Avdimiotis All Rights Reserved</p>
+    </div>
+
+  </div>
+</footer>
