--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark"
-     style="background-color: #5e72e4;"> <!-- TODO Change color -->  
+<nav class="navbar navbar-expand-lg navbar-dark">  
 
   <a class="navbar-brand"
-     href="/5fe706f450a0c923cc4248e5"> <!-- TODO Delete this line -->
+     href="/home">
     <img src="/assets/Letter.png"
          width="30"
          height="30"
