--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,24 +1,16 @@
-<!--
-=========================================================
-* Argon Dashboard - v1.2.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
-
-
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
-
-
-
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
-<html lang="en"
-      dir="ltr">
+<html>
 
 <head>
-      <meta charset="utf-8" />
+      <meta charset="UTF-8" />
+      <meta name="description"
+            content="Store your Scrabble scores here!">
+      <meta name="keywords"
+            content="Scrabble, store, statistics">
+      <meta name="author"
+            content="Christos Avdimiotis">
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1">
       <title>Scrabble</title>
       <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -29,10 +21,11 @@
       <link rel="stylesheet"
             href="/css/styles.css" />
       <!-- Icons -->
-      <script src="https://kit.fontawesome.com/b4c69266b5.js" crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/b4c69266b5.js"
+              crossorigin="anonymous"></script>
       <!-- Favicon -->
-      <link rel="icon" href="/assets/Letter.ico">
+      <link rel="icon"
+            href="/assets/Letter.ico">
 </head>
 
 <body>
-      
