--- a/views/login_page.ejs
+++ b/views/login_page.ejs
@@ -6,18 +6,27 @@
     <!-- Topnav -->
     <%- include('partials/topnav'); -%>
     <!-- Header -->
-    <div class="header bg-primary pb-6 scrabble-stats-page-bg-img">
-        <!-- Mask -->
-        <span class="mask bg-gradient-default opacity-3"></span>
-        <div class="container-fluid">
-            <div class="header-body">
-                <div class="row align-items-center py-4">
-                    <div class="col-lg-6 col-7">
-                        <h6 class="h2 text-white d-inline-block mb-0">
-                            Please fill in the form below to register</h6>
+    <div class="header bg-gradient-primary py-7 py-lg-8 pt-lg-9">
+        <div class="container">
+            <div class="header-body text-center mb-7">
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 col-lg-6 col-md-8 px-5">
+                        <h1 class="text-white">Sign in below to view your profile</h1>
+                        <p class="text-lead text-white">This is still a test version please don't log in until this message is deleted</p>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="separator separator-bottom separator-skew zindex-100">
+            <svg x="0"
+                 y="0"
+                 viewBox="0 0 2560 100"
+                 preserveAspectRatio="none"
+                 version="1.1"
+                 xmlns="http://www.w3.org/2000/svg">
+                <polygon class="fill-default"
+                         points="2560 0 2560 100 0 100"></polygon>
+            </svg>
         </div>
     </div>
     <!-- Page content -->
