--- a/views/register_page.ejs
+++ b/views/register_page.ejs
@@ -8,10 +8,9 @@
         <div class="container">
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
-                    <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                        <h1 class="text-white">Create an account</h1>
-                        <p class="text-lead text-white">Use these awesome forms to login or create new account in your
-                            project for free.</p>
+                    <div class="col-xl-8 col-lg-6 col-md-8 px-5">
+                        <h1 class="text-white">Create an account to store scrabble games</h1>
+                        <p class="text-lead text-white">This is still a test version please don't register until this message is deleted</p>
                     </div>
                 </div>
             </div>
@@ -32,8 +31,8 @@
     <div class="container mt--8 pb-5">
         <!-- Table -->
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8">
-                <div class="card bg-secondary border-0">
+            <div class="col-lg-7 col-md-7">
+                <div class="card bg-secondary border-0 ">
                     <!-- <div class="card-header bg-transparent pb-5">
                         <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
                         <div class="text-center">
