Bug regarding the id's type mismatch corrected. Now all games appear in the opponents table.

--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -440,7 +440,7 @@
       var userName = category.replace("UserName:", "");
 
       opponents.forEach(opponent => {
-        if (opponent._id === 0 && userName === opponent.name) {
+        if (opponent._id === '0' && userName === opponent.name) {
 
           //Replace title 
           $("#general-table-title").text('Your matches against ' + opponent.name);
