--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -201,7 +201,7 @@
         </div>
       </div>
       <div class="col-xl-9">
-        <div class="col">
+        <!-- <div class="col"> -->
           <div class="card">
             <!-- Card header -->
             <!-- TODO Fix css for table -->
@@ -210,28 +210,16 @@
                   id="general-table-title">Your Games, <%= name %></h3>
             </div>
             <!-- Light table -->
-            <div class="table-responsive">
+            <div class="table-responsive" >
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col"
-                        class="sort"
-                        data-sort="name">Your Score</th>
-                    <th scope="col"
-                        class="sort"
-                        data-sort="budget">Opponents</th>
-                    <th scope="col"
-                        class="sort"
-                        data-sort="status">Winner</th>
-                    <th scope="col"
-                        class="sort"
-                        data-sort="status">Your Position</th>
-                    <th scope="col"
-                        class="sort"
-                        data-sort="status">Differences</th>
-                    <th scope="col"
-                        class="sort"
-                        data-sort="status">Result</th>
+                    <th>Your <br>Score</th>
+                    <th>Opponents</th>
+                    <th>Winner</th>
+                    <th>Your <br>Position</th>
+                    <th>Differences</th>
+                    <th>Result</th>
                   </tr>
                 </thead>
                 <tbody class="list"
@@ -393,7 +381,7 @@
               </table>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </div>  
   </div>
