--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -30,7 +30,7 @@
     </div>
 
     <div class="legal">
-      <p>Copyright 2020 Christos Avdimiotis All Rights Reserved</p>
+      <p>Copyright 2020 Christos Avdimiotis <br> All Rights Reserved</p>
     </div>
 
   </div>
