--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark">  
+<nav class="navbar navbar-expand-lg navbar-dark">
 
   <a class="navbar-brand"
-     href="/home">
+     href="/">
     <img src="/assets/Letter.png"
          width="30"
          height="30"
@@ -18,7 +18,6 @@
           aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse"
        id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -30,10 +29,6 @@
         <a class="nav-link font-weight-bold"
            href="/scrabble-statistics">Scrabble Statistics <span class="sr-only">(current)</span></a>
       </li> -->
-      <li class="nav-item active float-right">
-        <a class="nav-link font-weight-bold"
-           href="/5fe706f450a0c923cc4248e5">My Profile<span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/log-in">Log In <span class="sr-only">(current)</span></a>
@@ -47,5 +42,69 @@
            href="/create-new-game">Create a new game!<span class="sr-only">(current)</span></a>
       </li>
     </ul>
+    <!-- <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/5fe706f450a0c923cc4248e5">My Profile<span class="sr-only">(current)</span></a>
+      </li>
+    </ul> -->
+
   </div>
+  <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+    <li class="nav-item dropdown">
+      <a class="nav-link pr-0"
+         href="#"
+         role="button"
+         data-toggle="dropdown"
+         aria-haspopup="true"
+         aria-expanded="false">
+        <div class="media align-items-center">
+          <i class="fas fa-bell"></i>
+        </div>
+    </li>
+    <a class="nav-link pr-0"
+       href="#"
+       role="button"
+       data-toggle="dropdown"
+       aria-haspopup="true"
+       aria-expanded="false">
+      <div class="media align-items-center">
+        <i class="fas fa-user-circle fa-2x"></i>
+        <div class="media-body  ml-2  d-none d-lg-block">
+          <span class="mb-0 text-sm  font-weight-bold">Username</span>
+          <!--TODO after register the name should appear here  -->
+        </div>
+      </div>
+    </a>
+    <div class="dropdown-menu  dropdown-menu-right ">
+      <div class="dropdown-header noti-title">
+        <h6 class="text-overflow m-0">Welcome!</h6>
+      </div>
+      <a href="/5fe706f450a0c923cc4248e5"
+         class="dropdown-item">
+        <i class="fas fa-user-alt"></i>
+        <span>My profile</span>
+      </a>
+      <a href="/5fe706f450a0c923cc4248e5/friends"
+         class="dropdown-item">
+        <i class="fas fa-user-friends"></i>
+        <span>My friends</span>
+      </a>
+      <!-- <a href="#!" class="dropdown-item">
+          <i class="ni ni-calendar-grid-58"></i>
+          <span>Activity</span>
+        </a>
+        <a href="#!" class="dropdown-item">
+          <i class="ni ni-support-16"></i>
+          <span>Support</span>
+        </a> -->
+      <div class="dropdown-divider"></div>
+      <a href="/log-out"
+         class="dropdown-item">
+        <i class="fas fa-sign-out-alt"></i>
+        <span>Logout</span>
+      </a>
+    </div>
+    </li>
+  </ul>
 </nav>
