--- a/public/css/argon.css
+++ b/public/css/argon.css
@@ -5861,7 +5861,7 @@ input[type='button'].btn-block
     text-decoration: none;
 }
 
-.navbar-toggler-icon
+/* .navbar-toggler-icon
 {
     display: inline-block;
 
@@ -5873,7 +5873,7 @@ input[type='button'].btn-block
 
     background: no-repeat center center;
     background-size: 100% 100%;
-}
+} */
 
 @media (max-width: 575.98px)
 {
@@ -6181,10 +6181,10 @@ input[type='button'].btn-block
     border-color: transparent;
 }
 
-.navbar-light .navbar-toggler-icon
+/* .navbar-light .navbar-toggler-icon
 {
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'30\' height=\'30\' viewBox=\'0 0 30 30\'%3e%3cpath stroke=\'rgba(0, 0, 0, 0.6)\' stroke-linecap=\'round\' stroke-miterlimit=\'10\' stroke-width=\'2\' d=\'M4 7h22M4 15h22M4 23h22\'/%3e%3c/svg%3e');
-}
+} */
 
 .navbar-light .navbar-text
 {
@@ -6238,10 +6238,10 @@ input[type='button'].btn-block
     border-color: transparent;
 }
 
-.navbar-dark .navbar-toggler-icon
+/* .navbar-dark .navbar-toggler-icon
 {
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'30\' height=\'30\' viewBox=\'0 0 30 30\'%3e%3cpath stroke=\'rgba(255, 255, 255, 0.95)\' stroke-linecap=\'round\' stroke-miterlimit=\'10\' stroke-width=\'2\' d=\'M4 7h22M4 15h22M4 23h22\'/%3e%3c/svg%3e');
-}
+} */
 
 .navbar-dark .navbar-text
 {
@@ -21144,7 +21144,7 @@ textarea[resize='horizontal']
 {
     color: white;
 }
-.navbar-horizontal.navbar-transparent .navbar-toggler-icon
+.navbar-horizontal.navbar-transparent
 {
     background-image: url('data:image/svg+xml,<svg xmlns=\'http://www.w3.org/2000/svg\' width=\'30\' height=\'30\' viewBox=\'0 0 30 30\'><path stroke=\'rgba(255, 255, 255, 0.95)\' stroke-linecap=\'round\' stroke-miterlimit=\'10\' stroke-width=\'2\' d=\'M4 7h22M4 15h22M4 23h22\'/></svg>');
 }
