--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -16,11 +16,11 @@
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon mr-auto"></span>
   </button>
   <div class="collapse navbar-collapse"
        id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/">Home <span class="sr-only">(current)</span></a>
@@ -52,7 +52,7 @@
          aria-haspopup="true"
          aria-expanded="false">
         <div class="media align-items-center">
-          <i class="fas fa-bell"></i> <!-- TODO implement notification system -->
+          <i class="fas fa-bell"></i> <!-- TODO implement notification system --> 
         </div>
       </a>
     </li>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </a>
-      <% if (loggedIn){ %>
+      <% if (loggedIn){ %> <!-- TODO use isauthenticated -->
       <div class="dropdown-menu  dropdown-menu-right ">
         <div class="dropdown-header noti-title">
           <h6 class="text-overflow m-0">Welcome!</h6>
@@ -123,4 +123,6 @@
       <% } %>
     </li>
   </ul>
+  
+  
 </nav>
